# cpp_essentials

./: .gitignore
include/cpp_essentials/: md5.hpp
include/cpp_essentials/arrays/: array.hpp  array_base.hpp  array_view.hpp  iterator.hpp  region_iterator.hpp  slice_iterator.hpp  transformations.hpp
include/cpp_essentials/async/: channel.hpp  event_aggregator.hpp  task_queue.hpp
include/cpp_essentials/carto/: coords.hpp  coords_array.hpp  coords_operations.hpp
include/cpp_essentials/cc/: cc.hpp
include/cpp_essentials/chrono/: calendars.hpp  time.hpp
include/millrind/: iterable.hpp
projects/gcc/: CMakeLists.txt
projects/gcc/src/: main.cpp
projects/vs2017/: vs2017.sln
tests/: test_helpers.hpp
tests/core/: algorithm.test.cpp  algorithm_ext.test.cpp  chunk.test.cpp  container_helpers.test.cpp  filter.test.cpp  filter_map.test.cpp  flat_map.test.cpp  functors.test.cpp  iterate.test.cpp  map.test.cpp  map_utls.test.cpp  math_functors.test.cpp  numeric.test.cpp  ptr_vector.test.cpp  ref_vector.test.cpp  reverse.test.cpp  serialization.test.cpp  slice.test.cpp  zip.test.cpp
tests/geo/: bounding_box.test.cpp  contains.test.cpp  intersects.test.cpp  interval.tests.cpp  interval_operations.test.cpp  linear_shape.test.cpp  poly_shape.test.cpp  vertex_array.test.cpp  vertex_container.test.cpp
tests/math/: math_functors.test.cpp  matrix.test.cpp  regression.test.cpp  vector.test.cpp
tests/sq/: chunk.test.cpp  filter.test.cpp  front.test.cpp  iterate.test.cpp  map.test.cpp  numeric.test.cpp  reverse.test.cpp  slice.cpp  slice.test.cpp  zip.test.cpp
(+282 files in other folders)
